--- a/assets/titlepage.tex
+++ b/assets/titlepage.tex
@@ -38,7 +38,7 @@
 \newpage
 
 
-\begin{tabu} to \linewidth { X  X | X | X }
+\begin{tabu} to 0.9\linewidth { X  X | X | X }
 \toprule
 
  
@@ -47,22 +47,25 @@
 
    & & Due Delivery Date:    & January 31/2023     \\ \cmidrule{3-4}
  
-   & & Actual Delivery Date:    & January 31 / 2023       \\ \midrule
+   & & Actual Delivery Date:    & March xx / 2023       \\ \midrule
  
 
 \multicolumn{4}{l|}{ } \\ \midrule
 
  Responsible:    &  \multicolumn{3}{|l}{Université de Lorraine }        \\ \midrule
         
- Dissemination Level    &  \multicolumn{3}{|l}{ }  \\ \midrule
- Title:    &   \multicolumn{3}{|l}{ }    \\ \hline
+ Dissemination Level    &  \multicolumn{3}{|l}{ Public }  \\ \midrule
+ Title:    &   \multicolumn{3}{|l}{ Report on the 3D printing of Recycled Plastic Demonstrator }    \\ \hline
 
- Description:    &    \multicolumn{3}{|l}{ }   \\ \midrule
+ Description:    &    \multicolumn{3}{| l}{ Description of the conceptual framework of distributed recycling }   \\ 
+ &    \multicolumn{3}{| l}{via additive manufacturing (DRAM) and its concrete implemnetation in a DIT approach. }   \\ 
+    &    \multicolumn{3}{| l}{The technologies, materials and methods are reported}   \\
+    &    \multicolumn{3}{| l}{Sevearal illustrative case studies are presented }   \\ \midrule
 
- Version    &   \multicolumn{3}{|l}{ }    \\ \midrule
+ Version    &   \multicolumn{3}{|l}{ Version 2}    \\ \midrule
  Contributors       & Versions    & Dates       & Revision Description \\ \midrule
-        
- & & & \\ \midrule
+WP6 Leader & 0 & February 04/2023 & Validation of the global structure  \\ \midrule        
+UL & 1 & March 03/2022 & Revision of a version 1 \\ \midrule
         
 \end{tabu}
 
